crates/tsuno-driver/tests/fixtures/snapshots/fail/abstracts_mutable_reference_calls.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL bump
  type invariant does not hold
  src/main.rs:2:5: 2:12
FAIL bad_after_call
  assertion failed
  src/main.rs:9:1: 9:21
PASS main
  all assertions discharged

stderr:
