crates/tsuno-driver/tests/fixtures/snapshots/fail/allows_mutable_reference_field_splitting.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL allows_mutable_reference_field_splitting
  mutable reference close failed
  src/main.rs:6:1: 6:2
FAIL allows_mutable_reference_field_splitting_three
  mutable reference close failed
  src/main.rs:15:1: 15:2
PASS main
  all assertions discharged

stderr:
