crates/tsuno-driver/tests/fixtures/snapshots/fail/allows_mutable_reference_to_tuple_initial_state.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL allows_mutable_reference_to_tuple_initial_state
  mutable reference close failed
  src/main.rs:3:2: 3:2
FAIL allows_mutable_reference_to_tuple_initial_state_three
  mutable reference close failed
  src/main.rs:7:2: 7:2
PASS main
  all assertions discharged

stderr:
