crates/tsuno-driver/tests/fixtures/snapshots/fail/allows_partial_move_then_remaining_field_write.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
PASS partial_move_then_remaining_field_write
  all assertions discharged
FAIL partial_move_then_remaining_field_write_three
  mutable reference close failed
  src/main.rs:18:1: 18:2
PASS main
  all assertions discharged

stderr:
