crates/tsuno-driver/tests/fixtures/snapshots/fail/assume_prunes_when_not_entailed.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL assume_prunes_when_not_entailed
  precondition failed
  src/main.rs:7:1: 7:14
PASS impossible
  all assertions discharged
PASS main
  all assertions discharged

stderr:
