crates/tsuno-driver/tests/fixtures/snapshots/fail/dangles_projected_move_mutable_reference.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL dangles_projected_move_mutable_reference
  mutable reference close failed
  src/main.rs:8:1: 8:2
PASS main
  all assertions discharged

stderr:
