crates/tsuno-driver/tests/fixtures/snapshots/fail/infers_body_ref_spec_var.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL main
  assertion failed
  src/main.rs:4:5: 4:31

stderr:
