crates/tsuno-driver/tests/fixtures/snapshots/fail/multi_file_module_checked.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 108
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL helper::bad
  assertion failed
  src/helper.rs:2:1: 2:21
PASS main
  all assertions discharged

stderr:
