crates/tsuno-driver/tests/fixtures/snapshots/fail/reads_shared_reborrow_from_mut_ref.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL reads_shared_reborrow_from_mut_ref
  mutable reference close failed
  src/main.rs:10:1: 10:2
PASS main
  all assertions discharged

stderr:
