crates/tsuno-driver/tests/fixtures/snapshots/fail/reborrow_after_opaque_move_call.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
FAIL opaque
  mutable reference close failed
  src/main.rs:1:26: 1:26
FAIL reborrow_after_opaque_move_call
  mutable reference close failed
  src/main.rs:8:1: 8:2
PASS main
  all assertions discharged

stderr:
