crates/tsuno-driver/tests/fixtures/snapshots/fail/rejects_bare_rust_binding_in_assert.snap
---
source: crates/tsuno-driver/tests/snapshot_tests.rs
assertion_line: 85
expression: snapshot_output(output)
---
status: Some(1)
stdout:
UNSUPPORTED main
  unresolved binding `x` in //@ assert
  src/main.rs:4:2: 4:2

stderr:
